--- a/.github/workflows/replacements_from_issue.yml
+++ b/.github/workflows/replacements_from_issue.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           add: 'spotify_gender_ex/res/replacements.json'
           branch: 'replacements/${{ env.spotify_version }}'
+          pull_strategy: NO-PULL
           default_author: github_actions
           message: 'Added ${{ env.n_replacements }} new replacements for Spotify ${{ env.spotify_version }}'
 
