--- a/.github/workflows/replacements_from_issue.yml
+++ b/.github/workflows/replacements_from_issue.yml
@@ -35,6 +35,7 @@ jobs:
           add: 'spotify_gender_ex/res/replacements.json'
           branch: 'replacements/${{ env.spotify_version }}'
           pull_strategy: NO-PULL
+          push: 'origin replacements/${{ env.spotify_version }} --force'
           default_author: github_actions
           message: 'Added ${{ env.n_replacements }} new replacements for Spotify ${{ env.spotify_version }}'
 
