--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,12 @@
 [bumpversion]
-current_version = 2.3.0
+current_version = 2.4.0
 commit = False
 tag = False
 
 [bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
 
 [bumpversion:file:spotify_gender_ex/genderex.py]
+search = VERSION = '{current_version}'
+replace = VERSION = '{new_version}'
