Added option for multiple replacement tables Removed logfiles Updated version strings Updated credits.html (+logo)

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.4.0
+current_version = 3.0.0
 commit = False
 tag = False
 
@@ -7,6 +7,6 @@ tag = False
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:spotify_gender_ex/genderex.py]
-search = VERSION = '{current_version}'
-replace = VERSION = '{new_version}'
+[bumpversion:file:spotify_gender_ex/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
