--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           files: |
             replacements.json
 
-      - name: Run step only when files change.
+      - name: Run GenderEx only when RT changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         uses: mvasigh/dispatch-action@main
         with:
