--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
+  pull_request:
 
 jobs:
   test:
@@ -39,25 +39,3 @@ jobs:
       - name: Test with pytest
         run: |
           pytest -rP
-
-  dispatch:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Verify changed replacement table
-        uses: tj-actions/verify-changed-files@v7.1
-        id: verify-changed-files
-        with:
-          files: |
-            replacements.json
-
-      - name: Run GenderEx only when RT changes
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
-        uses: mvasigh/dispatch-action@main
-        with:
-          token: ${{ secrets.MY_GH_TOKEN }}
-          repo: GenderEx-Run
-          owner: Theta-Dev
-          event_type: run_genderex
