--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Set up chromedriver
+        uses: nanasess/setup-chromedriver@master
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
