--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -24,3 +24,18 @@ jobs:
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: thetadev256/spotify-gender-ex:latest
